1997-12-16  Alex Lancaster  <alex@wijiji.santafe.edu>

	* tests: Added subdirectory with some "unit" module tests.

1997-12-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ControlPanel.m ([ControlPanel -setStateSave]): Renamed from
	setStateStoppedAndSave.  This version doesn't call setStateStopped.
	Minor reformatting.

	* ControlPanel.h: Rename setStateStoppedAndSave to setStateSave.
	Reformatting throughout.

	* ActionCache.m ([ActionCache -insertAction:]): Insert renamed
	setStateSave.
	([ActionCache -deliverActions]): Only schedule a Stop, do
	Save and Quit immediately.
	([ActionCache -sendActionOfType:type:]): Don't set running
	status if it is a Save; try to be passive.
	Reformatting throughout.

1997-12-12  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* MessageProbeWidget.m ([MessageProbeWidget -idReceive:which]): 
	Duplicate output of tclObjc_objectToName; it is needed and will
	get overwritten.

1997-12-11  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Archiver.m (defaultFileName): Change from ~/.swarm to
	~/.swarmArchiver for default archiver path.

1997-12-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* InFile.m ([InFile -getChar:]): fgetc to an int (for comparison
	with EOF).
	([InFile -skipLine]): Likewise.

	* simtools.h: Consify toExecute argument of ActionCache
	sendActionOfType.
	Consify setBaseName argument of UName create.
	Consify argument to UName setBaseName.
	Consify return of UName getNewName.
	Consify withName argument of InFile create.
	Consify withName argument of OutFile create.
	Consify argument to OutFile putString.
	Consify withName argument of AppendFile create.
	Consify argument to AppendFile putString.

	* UName.m ([UName +create:setBaseName:]): Consify setBaseName
	argument to create.
	([UName -setBaseName:]): Consify argument.
	([UName -getNewName]): Consify return.
	Reformatting throughout.

	* UName.h: Consify setBaseName argument to create.
	Consify argument to setBaseName.
	Consify return of getNewName.