@@ -1,3 +1,10 @@
+1997-12-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* ObjectLoader.h: Constify fromFileNamed argument to load.
+
+	* ObjectSaver.h: Constify toFileNamed argument for save methods.
+	Reformatting throughout.
+	
 1997-12-16  Alex Lancaster  <alex@wijiji.santafe.edu>
 
 	* tests: Added subdirectory with some "unit" module tests.
